--- a/css/portfolio_style.css
+++ b/css/portfolio_style.css
@@ -24,7 +24,7 @@
 }
 #name-text{
     color: #ffffffec;
-    font-family:'Metal Mania', cursive;
+    font-family:'metal_maniaregular', cursive;
     text-shadow: 1px 1px rgb(0, 0, 0);
     letter-spacing: 5px;
     font-size: 30px;
@@ -44,7 +44,7 @@
 }
 body{
     color: white;
-    font-family: Open Sans, monospace;
+    font-family: open_sansregular, monospace;
     background: rgb(0, 0, 0);
     text-indent: 10px;
     margin: 0px;
