--- a/css/portfolio_style.css
+++ b/css/portfolio_style.css
@@ -12,7 +12,7 @@
     letter-spacing: 5px;
     font-size: 30px;
     text-decoration: none;
-    text-align: center
+    text-align: center;
 }
 #nav-bar{
     padding: 0.1px;
@@ -20,8 +20,8 @@
     position: sticky;
     top: 0px;
     text-align: center;
-    left: 300px
-    width: 30%;
+    left: 300px;
+    width: 100%;
 }
 #contact-links{
     letter-spacing: 5px;
@@ -36,7 +36,7 @@
 body{
     color: white;
     font-family: 'Open Sans', monospace;
-    background: rgb(0, 0, 0);
+    background: url('https://kevin-poncepalos.github.io/images/background-4.jpg') black;
     text-indent: 10px;
     margin: 0px;
 }
@@ -76,4 +76,5 @@ footer{
     background: dodgerblue;
     text-align: center;
     font-size: 12px;
+    box-shadow: 0 50vh 0 50vh black;
 }
