--- a/css/portfolio_style.css
+++ b/css/portfolio_style.css
@@ -65,7 +65,7 @@ h3{
 p{
     width: 80%;
     margin: 0 auto;
-    font-family: Open Sans, monospace;
+    font-family: 'Open Sans', monospace;
 }
 footer{
     color:rgb(0, 0, 0);
