--- a/css/portfolio_style.css
+++ b/css/portfolio_style.css
@@ -17,11 +17,7 @@
 #nav-bar{
     padding: 0.1rem;
     background: #5d7bff85;
-    position: -webkit-sticky;
-    position: -moz-sticky;
-    position: -o-sticky;
-    position: -ms-sticky;
-    position: sticky;
+    position: relative;
     top: 0rem;
     right: 0rem;
     text-align: center;
