--- a/css/portfolio_style.css
+++ b/css/portfolio_style.css
@@ -6,7 +6,7 @@
     background: dodgerblue;
 }
 #name-text{
-    color: #ffffffec;
+    color: white;
     font-family:'Metal Mania', cursive;
     text-shadow: 0.063rem 0.063rem rgb(0, 0, 0);
     letter-spacing: 0.313rem;
@@ -29,14 +29,13 @@
 #link-text{
     padding-left: 6.25rem;
     text-align: center;
+    color: white;
 }
 #Projects{
     letter-spacing: 0.7rem;
-    text-align: center;
 }
 #About{
     letter-spacing: 0.4rem;
-    text-align: center
 }
 #Contact{
     letter-spacing: 0.7rem;
@@ -73,7 +72,7 @@ h3{
     letter-spacing: 0.4rem;
     width: 90%;
     margin: 0 auto;
-    color: white
+    color: #FF8D1E;
 }
 p{
     width: 80%;
