--- a/css/portfolio_style.css
+++ b/css/portfolio_style.css
@@ -31,6 +31,10 @@
     text-align: center;
     color: white;
 }
+.nodec{
+    text-decoration: none;
+    list-style-type: none;
+}
 #Projects{
     letter-spacing: 0.7rem;
 }
