--- a/css/portfolio_style.css
+++ b/css/portfolio_style.css
@@ -4,6 +4,7 @@
     padding: 0.625rem;
     margin-top: 0rem;
     background: dodgerblue;
+    text-align: center;
 }
 #name-text{
     color: white;
@@ -23,9 +24,7 @@
     left: 0rem;
     width: 100%;
 }
-#contact-links{
-    letter-spacing: 5rem;
-}
+
 #Projects{
     letter-spacing: 0.7rem;
 }
@@ -35,27 +34,26 @@
 #Contact{
     letter-spacing: 0.7rem;
 }
-.container{
-    width: 80%;
-    margin: 0 auto;
-}
-.list-format{
-    padding-left: 6.25rem;
-    text-align: center;
-    color: white;
-}
-.nodec{
-    text-decoration: none;
-    list-style-type: none;
-}
 body{
     color: white;
     font-family: 'Open Sans', monospace;
-    background: url('https://kevin-poncepalos.github.io/images/background-4.jpg') black; /*https://kevin-poncepalos.github.io/images/background-4.jpg*/
+    background: url('https://kevin-poncepalos.github.io/images/background-4.jpg') black;
     margin: 0rem;
 }
-li{
+.a_format{
+    color: white;
+    text-align: center;
     text-decoration: none;
+    margin: 0.5rem 3rem 0rem 0rem; 
+}
+.project-text{
+    color: white;
+    text-align: center;
+    margin: 0.5rem 5rem 0rem 1.5rem;
+}
+li{
+    list-style-type: none;
+    text-align: center;
 }
 nav ul{
     margin: 0.3125rem;
@@ -75,13 +73,12 @@ a{
     color: #FF8D1E;
 }
 h3{
-    letter-spacing: 0.4rem;
     width: 90%;
     margin: 0 auto;
     color: #FF8D1E;
 }
 p{
-    width: 80%;
+    width: 60%;
     margin: 0 auto;
     font-family: 'Open Sans', monospace;
 }
