--- a/css/portfolio_style.css
+++ b/css/portfolio_style.css
@@ -66,10 +66,13 @@ nav li{
     margin-right: 1.25rem;
 }
 nav a{
-    color: white;
+    color: #FF8D1E;
     text-decoration: none;
     font-family: 'Open Sans', monospace;
     font-size: 0.9375rem;
+    font-weight: bold;
+    text-shadow: 0.063rem 0.063rem rgb(0, 0, 0);
+
 }
 a{
     color: #FF8D1E;
